# telekinesis

ForwardList/: CMakeLists.txt
ForwardList/Forward_List_Headers/: forward_list.h  forward_list.hpp
ForwardList/Forward_List_Sources/: main.cpp
New_Vector/: CMakeLists.txt
New_Vector/VecHdr/: allocator.h  vector.h
New_Vector/VecSrc/: allocator.hpp  main.cpp  vector.hpp
Queue/: CMakeLists.txt
Queue/QueueHdr/: queue.h
Queue/QueueSrc/: main.cpp  queue.hpp
SpreadSheet/: CMakeLists.txt
SpreadSheet/SpreadSheetHdrs/: cell.h  spread_sheet.h
SpreadSheet/SpreadSheetSrc/: cell.cpp  main.cpp  spread_sheet.cpp
Stack/: CMakeLists.txt
Stack/StackHdr/: stack.h
Stack/StackSrc/: main.cpp  stack.hpp
String/: CMakeLists.txt
String/StringHeaders/: allocator.h  myString.h
String/StringSrc/: allocator.hpp  main.cpp  myString.hpp
Vector/: CMakeLists.txt
Vector/VectorHeaders/: Vector.h  Vector.hpp  allocator.h  allocator.hpp  construct_at.hpp
Vector/VectorSource/: main.cpp
